# tantivy-jni

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.gradle.kts  deny.toml  gradle.properties  install_android_ndk.sh  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: android-instrumentation.yml  android.yml  ios.yml  release-ios.yml  release.yml  rust.yml
api/: tantivy-android.api
config/detekt/: detekt.yml
docs/: API.md  IOS.md  PRODUCTION.md
fixtures/maven-consumer/: settings.gradle.kts
fixtures/maven-consumer/app/: build.gradle.kts  proguard-rules.pro
include/: module.modulemap  tantivy_ffi.h
sample-app/: build.gradle.kts  proguard-rules.pro
sample-app/src/main/: AndroidManifest.xml
scripts/: build-android-native.sh  build-ios-native.sh  generate-release-metadata.sh  kotlin-api-dump.py  verify-android-native.sh  verify-maven-consumer.sh  verify-release-artifacts.sh  verify-release-version.sh
src/: document.rs  error.rs  ffi_bridge.rs  jni_bridge.rs  lib.rs  lifecycle.rs  model.rs  registry.rs  schema.rs  searching.rs  tests.rs  validation.rs  writing.rs
tantivy-android/: build.gradle.kts  consumer-rules.pro
tantivy-ios/: Package.swift  README.md
tantivy-ios/Sources/TantivyKit/: Document.swift  FieldTypes.swift  FieldValue.swift  IndexOptions.swift  JSONCoding.swift  NativeBridge.swift  Results.swift  Schema.swift  SearchRequest.swift  TantivyClient.swift  TantivyError.swift  TantivyIndex.swift
tantivy-ios/Tests/TantivyKitTests/: TantivyKitTests.swift
(+22 files in other folders)
