[package]
name = "tantivy-jni"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[lib]
name = "tantivy_jni"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.22.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
