[package]
name = "tantivy-jni"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
license = "Apache-2.0"

[lib]
name = "tantivy_jni"
# staticlib is added for Apple platforms: the iOS/macOS XCFramework links the
# crate as a static archive (no JVM present). cdylib remains for Android JNI.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
jni = "0.22.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
